testdata/dangerous/cluster-admin-pod.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: cluster-admin-pod-sa
  namespace: default
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: cluster-admin-pod-binding
subjects:
- kind: ServiceAccount
  name: cluster-admin-pod-sa
  namespace: default
roleRef:
  kind: ClusterRole
  name: cluster-admin
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: v1
kind: Pod
metadata:
  name: cluster-admin-pod
  namespace: default
spec:
  serviceAccountName: cluster-admin-pod-sa
  containers:
  - name: app
    image: busybox
    command: ["sleep", "3600"]
